fixed overflow

--- a/src/css/lanyard.css
+++ b/src/css/lanyard.css
@@ -332,6 +332,9 @@ div#loading>div {
     color: var(--paragraph-color);
     margin-top: 12px;
     margin-right: 6px;
+    word-break: break-all;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 #activityName,
